6.01.07

-BUG FIX: Fixed issue on "My Portfolio" page, where average-paid-per-unit of asset was hard-coded to an 8 decimal maximum (causing low value tokens to NOT display gain / loss data)

-BUG FIX: Fixed the "Compact" (narrow) navigation menu's SUBMENU height rendering, and the auto-adjusting of it's vertical position, when it's detected that it's partially hidden

-BUG FIX: Fixed AlphaVantage Stock (FREE tier) issues, related to preserving cached data, after the daily live requests limits have been reached

-BUG FIX: Fixed issues in the throttling system, including sub-second throttling profiles, and deleting stale cache data

-BUG FIX: Fixes for duplicate asset search result detection (per-registered-exchange API)

-BUG FIX: Fixes for the plugin system

-BUG FIX: Miscellaneous

-Revised plugin system, with the new feature to expose plugins in the interface within a new primary navigation menu named "Plugin Area" (which will only show if a plugin's dev config is flagged to show there...see plugins documentation for more details)

-Added Solana network stats, to the "on-chain-stats" plugin (shows in the new "Plugin Area" navigation menu)

-Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)

-Increased amount of currency / crypto maximum decimals allowed (in the "Asset Tracking => Currency Support" Admin Config)

-Tweaks to coingecko API throttling, for a better user experience

-Better AlphaVantage "Stock Overview" API integration / UX

-Added support for OkEx perpetual (futures) markets

-Added support for Gate.io USDT Futures markets

-Buildout of developer-only-maintenance plugin

-Server Edition auto-installer refactoring

-Better Server Edition auto-installer UX

-Minor user experience improvements

-Miscellaneous optimizations

-Refactoring

-------------------------------------------------------------------






